tests/ui-nightly/try_transmute_mut-dst-not-tryfrombytes.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_mut-dst-not-tryfrombytes.rs:18:33
  |
 18 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `ValidityError`
   --> src/error.rs
    |
    | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-8956a57fb49c192e.long-type-14061731537160218404.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_mut-dst-not-tryfrombytes.rs:18:63
  |
 18 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `zerocopy::util::macro_util::try_transmute_mut`
   --> src/util/macro_util.rs
    |
    | pub fn try_transmute_mut<Src, Dst>(src: &mut Src) -> Result<&mut Dst, ValidityError<&m...
    |        ----------------- required by a bound in this function
...
    |     Dst: TryFromBytes + IntoBytes,
    |          ^^^^^^^^^^^^ required by this bound in `try_transmute_mut`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-8956a57fb49c192e.long-type-14061731537160218404.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_mut-dst-not-tryfrombytes.rs:18:63
  |
 18 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
            and $N others
note: required by a bound in `zerocopy::util::macro_util::try_transmute_mut`
   --> src/util/macro_util.rs
    |
    | pub fn try_transmute_mut<Src, Dst>(src: &mut Src) -> Result<&mut Dst, ValidityError<&m...
    |        ----------------- required by a bound in this function
...
    |     Dst: TryFromBytes + IntoBytes,
    |                         ^^^^^^^^^ required by this bound in `try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_mut-dst-not-tryfrombytes.rs:18:63
  |
 18 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `ValidityError`
   --> src/error.rs
    |
    | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-8956a57fb49c192e.long-type-14061731537160218404.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
